--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="image.png">
+    <img src="image.jpg" alt="My Image">
+    <img src="image.jpeg" alt="Your Image" title="This is my image">
   </body>
 </html>
